# pokemon-gan

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test.py  train.py
src/: models.py  trainer.py  utils.py
tensorboard/DCGAN/: events.out.tfevents.1592317851.DESKTOP-J9S2N3S  events.out.tfevents.1592321423.DESKTOP-J9S2N3S  events.out.tfevents.1592353502.DESKTOP-J9S2N3S  events.out.tfevents.1592393271.DESKTOP-J9S2N3S
tensorboard/DCGAN_01/: events.out.tfevents.1591887073.DESKTOP-J9S2N3S
tensorboard/SAGAN/: events.out.tfevents.1592402493.DESKTOP-J9S2N3S  events.out.tfevents.1592405484.DESKTOP-J9S2N3S
tensorboard/SAGAN_01/: events.out.tfevents.1591887162.DESKTOP-J9S2N3S
