[tool.poetry]
name = "pokemon-gan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
streamlit = "^0.61.0"
pandas = "^1.0.4"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
scikit-learn = "^0.23.1"
tqdm = "^4.46.1"
opencv-python = "^4.2.0"
pillow = "^7.1.2"
tensorboardx = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
